dn-wordpress/deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: dn-wordpress
spec:
  replicas: 1
  selector:
    matchLabels:
      app: dn-wordpress
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: dn-wordpress
    spec:
      containers:
      - image: wordpress
        name: dn-wordpress
        ports:
        - containerPort: 80
          name: wordpress
        volumeMounts:
        - name: dn-wordpress-persistent-storage
          mountPath: /var/www/html
      volumes:
      - name: dn-wordpress-persistent-storage
        persistentVolumeClaim:
          claimName: dn-wordpress-pv-claim
