dn-wordpress/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: dn-wordpress
spec:
  type: NodePort
  ports:
   - nodePort: 30170
     port: 80
     targetPort: 80
  selector:
    app: dn-wordpress
