dn-wordpress/ingress-tls.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: dn-wordpress
  annotations:
    kubernetes.io/ingress.class: "nginx"    
    cert-manager.io/issuer-name: ca-issuer
spec:
  tls:
  - hosts:
    - dn-wordpress.ittlabb.net
    secretName: dn-wordpress-cert-tls
  rules:
  - host: dn-wordpress.ittlabb.net
    http:
      paths:
      - path: /
        backend:
          serviceName: dn-wordpress
          servicePort: 80
